rock paper scissors

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     </head>
     <body>
         <h1>JS World 101</h1>
-        <script>
             alert("JS World is here now")
         </script>
-        <script src="./javascript.js"></script>
+        <script src="./rock-paper-scissors.js"></script>
     </body>
-</html>
+</html> 
