--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
-    <head>
-       <title> JS World 101 </title> 
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JS World 101</title>
+</head>
+
+<body>
         <h1>JS World 101</h1>
-            alert("JS World is here now")
+        <script>
+            alert("Welcome, Deborah!");
         </script>
-        <script src="./rock-paper-scissors.js"></script>
-    </body>
+       <!--<script src="./javascript.js"></script>
+
+<script src="./rock-paper-scissors.js"></script>-->
+<script src="./individualassignment.js"></script>   
+
+</body>
+
 </html> 
