--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </script>
        <!--<script src="./javascript.js"></script>
 
-<script src="./rock-paper-scissors.js"></script>-->
-<script src="./individualassignment.js"></script>   
+<script src="./bank.js"></script>
+<script src="./cart.js"></script>
 
 </body>
 
